--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul id="cast"></ul>
     </section>
     <section>
-        <img src="#" alt="#">
+        <img src="" alt="">
     </section>
     <script src="main.js"></script>
 </body>
